--- a/templates/trucks/truck.html
+++ b/templates/trucks/truck.html
@@ -3,13 +3,17 @@
   <head>
     <title>Hello Foodtrucks</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7Up4BgnfTfIqkKGZGtDGYSN2DOVgwac&sensor=false">
+      </script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/lib/underscore-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/lib/backbone-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/lib/handlebars.js"></script>
+    
+    <script type="text/javascript" src="{{ STATIC_URL }}js/mapoperation.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/gettrucks.js"></script>
-
    
 
     
@@ -20,87 +24,10 @@
       #content { width:30%; float:left; margin: 2%; padding: 2%}
       #map-canvas { height: 400px; width:40%; float: right; margin: 5%; padding: 5%}
     </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7Up4BgnfTfIqkKGZGtDGYSN2DOVgwac&sensor=false"></script>
+
      
 
-    <script type="text/javascript">
-    var geocoder;
-    var map;
-    var lat;
-    var lng;
-    var trucks;
-    var markers = []; 
-
-    function initialize() {
-      geocoder = new google.maps.Geocoder();
-      var latlng = new google.maps.LatLng(37.7901490737255,-122.398658184604);
-      var mapOptions = {
-        zoom: 15,
-        center: latlng
-      }
-  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-  marker = new google.maps.Marker({
-            position: latlng,
-            map: map,
-           
-  });
-
-}
-
-function codeAddress() {
-  var address = document.getElementById('address').value;
-  geocoder.geocode( { 'address': address}, function(results, status) {
-    if (status == google.maps.GeocoderStatus.OK) {
-      map.setCenter(results[0].geometry.location);
-      marker.setPosition(results[0].geometry.location);
-      lat = results[0].geometry.location.lat();
-      lon = results[0].geometry.location.lng();
-      getTrucks(address, lat, lon)
-    } else {
-      alert('Geocode was not successful for the following reason: ' + status);
-    }
-  });
-}
-
-
-
-function placeMarkers(data){
-  console.log(data);
-  if (markers.length > 0){
-    for (i = 0; i < 10 ; i++){
-      markers[i].setMap(null);
-    }
-    markers = [];
-  } 
-  for (var key in data) {
-            var truck = data[key];
-            lat = truck.latitude;
-            lon = truck.longitude;
-            var latlng = new google.maps.LatLng(lat,lon);
-            var pinColor = "FFFF00";
-            var pinText = key;
-            var pinImage = new google.maps.MarkerImage("http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=" + key + "|" + pinColor,
-            new google.maps.Size(21, 34),
-            new google.maps.Point(0,0),
-            new google.maps.Point(10, 34));
-            
-            var marker = new google.maps.Marker({
-              position: latlng,
-              map: map,
-              icon : pinImage,
-           });
-            markers.push(marker);
-            marker.setMap(map);
-    }
-}
-
-
-
-google.maps.event.addDomListener(window, 'load', initialize);
    
-    </script>
   </head>
   <body>
     <div id = "content">
