changing a bit html

--- a/templates/trucks/truck.html
+++ b/templates/trucks/truck.html
@@ -34,9 +34,9 @@
       <div id = "header">
 
         <div id = "site-logo"></div>
-         <div id = "site-title"><h1> Hello, <br> Food Trucks.</h1></div>
+         <div id = "site-title"><h1> Hello, Food Trucks.</h1></div>
         
-        <h3> Welcome to Food Trucks finder. Let's find food trucks near by! </h3> 
+        <h3> Welcome to Food Trucks finder. <br> Let's find food trucks near by! </h3> 
       </div>
       <h3> where are you now?</h3>
       <!-- form class = "address"> {% csrf_token %}
